objects/SPC_Relationship__c/SPC_Relationship__c.object-meta.xml
<CustomObject>
    <label>SPC Relationship</label>
    <nameField>
        <label>SPC Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPC Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>