objects/SPC_Relationship__c/fields/Auto_Include__c.field-meta.xml
<CustomField>
    <fullName>Auto_Include__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Include</label>
    <type>Checkbox</type>
</CustomField>