objects/SPC_Relationship__c/fields/Parent_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Relationship</label>
    <referenceTo>SPC_Relationship__c</referenceTo>
    <relationshipLabel>SPC Relationships</relationshipLabel>
    <relationshipName>SPC_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>