objects/SPC_Relationship__c/fields/Primary_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>SPC Relationships</relationshipLabel>
    <relationshipName>SPC_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>