objects/SPC_Relationship__c/fields/Relationship_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Display_Name__c</fullName>
    <description>Used to display text for a picklist or other relationship that may need a display text to help describe it.</description>
    <label>Relationship Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>