objects/SPC_Relationship__c/fields/Secondary_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>SPC Relationships (Secondary Sales Product)</relationshipLabel>
    <relationshipName>SPC_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>