objects/SPC_Relationship__c/fields/Secondary_Sales_Product_Component__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Product_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Product Component</label>
    <referenceTo>SPC_Component__c</referenceTo>
    <relationshipLabel>SPC Relationships (Secondary Sales Product Component)</relationshipLabel>
    <relationshipName>SPC_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>